# ComputationalWorkshop

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp  tasks.h
src/model/: boundary_condition.h  definite_integral_calculator.cpp  definite_integral_calculator.h  function.h  heat_equation_solver.cpp  heat_equation_solver.h  integral_calculator.h  linear_ode_solver.cpp  linear_ode_solver.h  matrix.cpp  matrix.h  polynomial.cpp  polynomial.h  root_calculator.cpp  root_calculator.h  solve_methods.h
src/semester5/: tasks.h
src/semester5/task1/: calculate_roots.cpp  calculate_roots.h  main.cpp  task1.cpp  task1.h
src/semester5/task2/: calculate_polynomial.cpp  calculate_polynomial.h  main.cpp  task2.cpp  task2.h
src/semester5/task3/: calculate_derivatives.cpp  calculate_derivatives.h  main.cpp  task3.cpp  task3.h
src/semester5/task4.1/: calculate_integral.cpp  calculate_integral.h  main.cpp  task4_1.cpp  task4_1.h
src/semester5/task4.2/: calculate_integral.cpp  calculate_integral.h  main.cpp  task4_2.cpp  task4_2.h
src/semester5/task4.3/: calculate_integral.cpp  calculate_integral.h  main.cpp  task4_3.cpp  task4_3.h
src/semester5/task5/: calculate_equation.cpp  calculate_equation.h  main.cpp  task5.cpp  task5.h
src/semester5/task6/: calculate_integral.cpp  calculate_integral.h  main.cpp  task6.cpp  task6.h
src/semester6/: tasks.h
src/semester6/task1/: condition_numbers.cpp  condition_numbers.h  main.cpp  task1.cpp  task1.h
src/semester6/task10/: main.cpp  optimization_methods.h  task10.cpp  task10.h
src/semester6/task11/: main.cpp  optimization_methods.h  task11.cpp  task11.h
src/semester6/task2/: main.cpp  solve_system.cpp  solve_system.h  task2.cpp  task2.h
src/semester6/task3/: main.cpp  solve_system.cpp  solve_system.h  task3.cpp  task3.h
src/semester6/task4/: calculate_eigenvector.cpp  calculate_eigenvector.h  check_eigenvector.cpp  check_eigenvector.h  main.cpp  task4.cpp  task4.h
src/semester6/task5/: main.cpp  task5.cpp  task5.h
src/semester6/task6/: main.cpp  task6.cpp  task6.h
src/semester6/task7/: main.cpp  task7.cpp  task7.h
src/semester6/task8/: main.cpp  task8.cpp  task8.h
src/util/: create_system_matrix.cpp  create_system_matrix.h  input_util.cpp  input_util.h  matrix_util.cpp  matrix_util.h  table.cpp  table.h  vector_util.cpp  vector_util.h
